         (Fred).
20130310 ui/gtk/{binary.c,debugger.c}: replace deprecated GtkTable with GtkGrid
         (patch #307) (Sergio).
20130310 ui/win32/{picture.c,statusbar.c}: use best practices for releasing GDI
         objects on win32 UI (thanks, Dr. Memory) (Sergio).
20130322 roms/{plus3e-0.rom,plus3e-1.rom,plus3e-2.rom}: update to v1.38 of the
         +3e ROMs (fixes bug #290) (thanks, Guesser) (Fred).
20130324 peripherals/nic/{w5100.c,w5100_internals.h,w5100_socket.c}: destroy 
         mutex before closing (patch #308) (Sergio).
20130325 ui/widget/options.pl: run the peripherals posthook at the appropriate
         point to work (bug #281) (Sergio and Fred).
20130404 ui/win32/win32joystick.c: fix input events fired when various joystick
         buttons are pressed simultaneously (Sergio).
20130407 input.[ch],man/fuse.1,settings.dat,ui/{gtk/gtkjoystick.c,
         sdl/sdljoystick.c,uijoystick.c,widget/menu.c}: allow up to 15 joystick
         buttons to be defined to accommodate e.g. XBox 360 ABXY button use
         (patch #309) (Fred).
20130420 peripherals/disk/disk.c: fix loading of EDSK files with redundant
         sector images (bug #293) (Fred).
20130420 peripherals/spectranet.c: allow disabling Spectranet code (more from 
         bug #259) (Sergio).
20130501 sound.c: don't try to enable right channel for Specdrum unless stereo
         mode is set (fixes bug #294) (thanks, mcleod_ideafix and Sergio)
         (Fred).
20130501 man/fuse.1: add %cfgnew step in Spectranet initialisation steps
         (thanks, smogit and Guesser) (Fred).
20130505 peripherals/{disk/opus.h,specdrum.h}: add missing subversion properties
         (Sergio).
20130505 machines/{spec128.h,specplus2.c},peripherals/{disk/opus.h,ide/divide.h,
         kempmouse.h,specdrum.h},settings-header.pl: remove and relocate some
         header inclusions (Sergio).
20130505 unittests/unittests.c: Add missing header (Sergio).